FIX: scrollbar styles on mobile for chat

--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -149,13 +149,20 @@
 .chat-scrollbar {
   position: absolute;
   left: 16px;
-  right: 16px;
+  //right: 16px;
+  right: 0;
+  padding-right: 16px;
   max-height: 100%;
   bottom: 0;
+
+  @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+    overflow-y: auto;
+  }
 
   @include media-breakpoint-up($desktop-breakpoint) {
     left: 20px;
     right: 20px;
+    padding-right: 0;
   }
 }
 
